--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 **/node_modules
 **/.env
 **/dist
+**/build
+**/coverage
+**/logs
+**/tmp
+**/temp
+**/yarn-error.log
+**/npm-debug.log
+**/package-lock.json
