--- a/backend/package.json
+++ b/backend/package.json
@@ -30,9 +30,12 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.0",
+    "ms": "^2.1.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
@@ -40,6 +43,9 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/express-session": "^1.18.1"
+    "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/ms": "^2.1.0",
+    "@types/passport-jwt": "^4.0.1"
   }
 }
