--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.9",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.0",
@@ -32,6 +33,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.0",
+    "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -40,6 +42,8 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2",
     "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-console-format": "^1.0.8",
     "zod": "^3.24.2"
   },
   "devDependencies": {
